--- a/Cununia noastră civilă_files/custom.css
+++ b/Cununia noastră civilă_files/custom.css
@@ -9,6 +9,18 @@
     padding-right: 20px;
 }
 
+.divided .small.text-dark-gray.opacity-8.left {
+  display: flex;
+  justify-content: flex-end;
+  flex: 1;
+}
+
+.divided .small.text-dark-gray.opacity-8.right {
+  display: flex;
+  justify-content: flex-start;
+  flex: 1;
+}
+
 * {box-sizing:border-box}
 
 
