--- a/andreisipaula/main2.css
+++ b/andreisipaula/main2.css
@@ -842,7 +842,24 @@ ul.instafeed-list li {
     }
 }
 
-@media(max-width:767.98px) {}
+@media(max-width:767.98px) {
+
+    .introduction .nume {
+        font-size: 2.5rem;
+        margin-bottom: 3rem;
+    }
+
+    .introduction .data {
+        font-size: 0.7rem;
+        color: #993333 !important;
+        font-weight: 800;
+    }
+
+    .introduction .min-vh-80 {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+}
 
 @media(min-width:768px) {}
 
