--- a/assets/main2.css
+++ b/assets/main2.css
@@ -107,6 +107,18 @@ body {
     height: 90vh;
 }
 
+.bg-image-footer {
+  
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        object-fit: cover;
+        position: absolute
+    
+}
+
 .min-vh-80 {
     padding-top: 10rem;
     padding-bottom: 10rem
@@ -115,7 +127,8 @@ body {
 .curved-decoration {
     position: relative;
     z-index: 2;
-    width: 100%
+    width: 100%;
+    bottom: -4px;
 }
 
 .curved-decoration svg {
