--- a/assets/main2.css
+++ b/assets/main2.css
@@ -916,13 +916,14 @@ ul.instafeed-list li {
 @media(min-width:1200px) {}
 
 .events-img-wrapper {
-    display: inline-block;
+    display: flex;
     position: relative;
-    width: 280px;
+    width: 100%;
     height: 300px;
     overflow: hidden;
     border-radius: 0%;
-    margin: 0 auto
+    margin: 0 auto;
+    justify-content: center;
 }
 
 .events-img-wrapper img {
@@ -954,4 +955,9 @@ select.form-control:not([size]):not([multiple]) {
 .introduction .curved-decoration {
     position: absolute;
     bottom: -4px;
+}
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
 }
