--- a/assets/main2.css
+++ b/assets/main2.css
@@ -919,16 +919,16 @@ ul.instafeed-list li {
     display: flex;
     position: relative;
     width: 100%;
-    height: 300px;
     overflow: hidden;
-    border-radius: 0%;
+    border-radius: 16px;
     margin: 0 auto;
     justify-content: center;
 }
 
 .events-img-wrapper img {
-    width: auto;
-    height: 100%
+    width: 100%;
+    height: auto;
+
 }
 
 select.form-control:not([size]):not([multiple]) {
